fix wrapping on additional filters on mobile view

--- a/src/stylesheets/search.scss
+++ b/src/stylesheets/search.scss
@@ -83,6 +83,7 @@ span.course-title {
   .filters-bar {
     display: flex;
     padding: $padding-xs;
+    flex-wrap: wrap;
 
     .wrapper {
 
